# bg3seMac

./: .gitignore  CMakeLists.txt  Generate BG3 Diagnostic.sh  README.md
BG3Extender/: stdafx.h  targetver.h
BG3Extender/GameDefinitions/: Net.h
BG3Updater/: stdafx.h
CoreLib/: stdafx.h
CrashReporter/: stdafx.h
TestGUI/: test_gui.py
macos/: bg3se_stub.cpp  create_stub_installer.sh
